--- a/configs/Bulbasaur/.env
+++ b/configs/Bulbasaur/.env
@@ -1,5 +1,5 @@
 
-DATABASE_HOST= "database"
+DATABASE_HOST= "46.202.162.37"
 DATABASE_NAME= "skillsharp_bulbasaur"
 DATABASE_USERNAME= "root"
 DATABASE_PASSWORD= "skillsharp@fit!2021"
