--- a/configs/Thresh/.env
+++ b/configs/Thresh/.env
@@ -1,6 +1,6 @@
 PORT=8080
 DB_TYPE='mysql'
-DB_HOST='database'
+DB_HOST='46.202.162.37'
 DB_USERNAME='root'
 DB_PASSWORD='skillsharp@fit!2021'
 DB_DATABASE='skillsharp_thresh'
