--- a/configs/Bulbasaur/.env
+++ b/configs/Bulbasaur/.env
@@ -10,4 +10,4 @@ AUTH_REFRESH_KEY= "skillsharp_refresh_key"
 REDIS_ADDRESS= "redis:6379"
 REDIS_NAMESPACE= "bulbasaur:auth"
 
-GOOGLE_CLIENT_ID= ""
+GOOGLE_CLIENT_ID= "71138927523-c0d2sbqi495s3isrrre9u1nr84arisc3.apps.googleusercontent.com"
